cluster/hats-with-friends/dev-client.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-client
  labels:
    app: dev-client
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: dev-client
  template:
    metadata:
      labels:
        app: dev-client
    spec:
      securityContext:
        runAsUser: 101
        runAsGroup: 101
      volumes:
        - name: tmp
          emptyDir:
            medium: Memory
        - name: cache
          emptyDir:
            medium: Memory
      containers:
        - name: client
          image: ghcr.io/christopherjmiller/hats-with-friends-client:main@sha256:414df59e100c3f34ab7bc248ef096dd199a23a48ef8173000787d8f80df28f67
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          lifecycle:
            preStop:
              exec:
                command: [/usr/sbin/nginx, -s, quit]
          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /var/cache/nginx
              name: cache
          securityContext:
            readOnlyRootFilesystem: true
            runAsUser: 101
            runAsGroup: 101
        - name: server
          image: ghcr.io/christopherjmiller/hats-with-friends-server:main@sha256:c0a60ead570213195b744e53ae5d0330fb38f05d46bf7279359881b03e118861
          ports:
            - containerPort: 14191
              protocol: TCP
            - containerPort: 14192
              protocol: UDP
            - containerPort: 14192
              protocol: TCP
          securityContext:
            readOnlyRootFilesystem: true
            runAsUser: 101
            runAsGroup: 101
---
apiVersion: v1
kind: Service
metadata:
  name: dev-client
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: dev-client
---
apiVersion: v1
kind: Service
metadata:
  name: dev-server-webrtc
spec:
  ports:
    - port: 14191
      targetPort: 14191
      protocol: TCP
      name: webrtc
  selector:
    app: dev-client
---
apiVersion: v1
kind: Service
metadata:
  name: dev-server
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.7
  ports:
    - port: 14192
      targetPort: 14192
      protocol: TCP
      name: rtc
  selector:
    app: dev-client
---
apiVersion: v1
kind: Service
metadata:
  name: dev-server-udp
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.6
  ports:
    - port: 14192
      targetPort: 14192
      protocol: UDP
      name: udp-rtc
  selector:
    app: dev-client
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-client
  annotations:
    external-dns.alpha.kubernetes.io/target: luma.chrismiller.xyz
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - hats.luma.chrismiller.xyz
      secretName: hats-tls
  rules:
    - host: hats.luma.chrismiller.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-client
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-server
  annotations:
    external-dns.alpha.kubernetes.io/target: luma.chrismiller.xyz
    kubernetes.io/ingress.class: webrtc-nginx
spec:
  tls:
    - hosts:
        - game.hats.luma.chrismiller.xyz
      secretName: game-hats-tls
  rules:
    - host: game.hats.luma.chrismiller.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-server-webrtc
                port:
                  number: 14191
